logout route completed
