# routers/auth.js
@@ -4,11 +4,14 @@ const router = express.Router();
 // IMPORTS FROM AUTH CONTROLLERS
 const { 
     createUser, 
-    login
+    login,
+    logout
 } = require('../controllers/auth');
 
 router.post('/signup/', createUser);
 
 router.post('/login/', login);
+
+router.get('/logout', logout);
 
 module.exports = router;
